--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "pg": "^8.13.1"
   }
 }
